<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="@color/purple_500"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/misionimg"></ImageView>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ucaldasimg"></ImageView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txUsername"
            android:textColor="@color/black"
            android:textSize="25sp"></TextView>

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txHintMail"></EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/txPass"
            android:textColor="@color/black"
            android:textSize="25sp"></TextView>

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txHintPass"></EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txLogin"
            android:id="@+id/btnLogin"
            android:onClick="onLogin"></Button>

    </LinearLayout>

</LinearLayout>